--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
     "mongoose": "^4.2.9",
-    "node-uuid": "^1.4.7"
+    "morgan": "~1.6.1",
+    "multer": "^1.1.0",
+    "multiparty": "^4.1.2",
+    "node-uuid": "^1.4.7",
+    "serve-favicon": "~2.3.0"
   }
 }
