--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "multer": "^1.1.0",
     "multiparty": "^4.1.2",
     "node-uuid": "^1.4.7",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "sharp": "^0.12.1"
   }
 }
